# CGNBT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/nbt/: FileReader.hpp  VarInt.hpp  VarText.hpp  adapters.hpp  auxiliary.hpp  error.hpp  helpers.hpp  inspect.hpp  iotype.hpp  mapLike.hpp  nbt.hpp  read.hpp  readGZip.hpp  readRaw.hpp  serialize.hpp  type.hpp  types.hpp  utils.hpp  write.hpp
include/nbt/type/: VarInt.hpp  VarText.hpp  iotype.hpp  type.hpp
src/: main.cpp
tests/: CMakeLists.txt  README.md  a.cgb  empty2.cgb  main.cpp  test.cgb  var.cpp
